--- a/assets/member.styl
+++ b/assets/member.styl
@@ -10,9 +10,8 @@
     position: absolute
     content: ""
     bottom: 0
-    left: 40%
-    width: 20%
-    min-width: 150px
+    left: 30%
+    width: 40%
     height: 3px
     background: #039be5
 
@@ -26,26 +25,26 @@
   flex-direction: row
   align-items: center
   justify-content: space-around
-  height: calc(100vh - 55px)
-  width: 1200px
-  max-width: 1400px
+  min-height: calc(100vh - 55px)
+  flex-wrap: wrap
 
   .intro-img
-    height: 100%
     position: relative
 
     img
-      height: 100%
+      max-height: calc(95vh - 55px - 24px)
+      max-width: 100%
 
     .drawer
       position: absolute
-      bottom: 0
+      top: 100%
       width: 250px
 
   .intro-text
     display: flex
     flex-direction: column
     min-width: 250px
+    margin: 50px 50px
 
     p
       margin: 0
